<resources>
    <string name="app_name">Favourite Places App</string>
    <string name="image_of_place">Image_of_place</string>
    <string name="place_title">Place Title</string>
    <string name="update">Update</string>
    <string name="places_api_key">AIzaSyCPOrmqwilVGiPOhlqabQBJjKuyqn9h08Q</string>
    <string name="select_current_location">Select Current Location</string>
    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="title_">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
</resources>